--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .tasksList > li:first-of-type button:last-of-type {
+    @apply bg-violet-600 text-slate-100;
+  }
+  .tasksList > li:first-of-type button:last-of-type .description {
+    @apply text-violet-300;
+  }
+  .tasksList > li:first-of-type button:last-of-type > div {
+    @apply border-violet-500;
+  }
 }
