--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.inputStyles {
+  @apply bg-slate-100 rounded-lg p-3 outline-transparent hover:outline-violet-600 focus:outline-violet-600 transition;
+}
+
+.btn {
+  @apply bg-violet-600 hover:bg-violet-700 py-3 px-6 text-slate-50 rounded-lg w-auto transition;
+}
+
 @layer components {
   .tasksList > li:first-of-type article {
     @apply bg-violet-600 text-slate-100;
@@ -12,6 +20,12 @@
   .tasksList > li:first-of-type article > div {
     @apply border-violet-500;
   }
+  .listView1 article {
+    @apply h-40;
+  }
+  .listView2 article {
+    @apply h-64;
+  }
   .children-styles {
     @apply text-slate-400;
   }
@@ -20,5 +34,12 @@
   }
   .children-styles svg {
     @apply w-6 h-6;
+  }
+  .stylesInputsField input,
+  .stylesInputsField textarea {
+    @apply inputStyles mt-1;
+  }
+  .stylesInputsField label {
+    @apply mb-4 text-slate-600;
   }
 }
