search field added

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   @apply bg-violet-600 hover:bg-violet-700 py-3 px-6 text-slate-50 rounded-lg w-auto transition;
 }
 
+.btn:active {
+  @apply scale-95;
+}
+
 @layer components {
   .tasksList > li:first-of-type article {
     @apply bg-violet-600 text-slate-100;
@@ -42,4 +46,24 @@
   .stylesInputsField label {
     @apply mb-4 text-slate-600;
   }
+}
+
+/* clears the 'X' from Internet Explorer */
+input[type="search"]::-ms-clear {
+  display: none;
+  width: 0;
+  height: 0;
+}
+input[type="search"]::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+/* clears the 'X' from Chrome */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
 }
