--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,12 @@
   .stylesInputsField label {
     @apply mb-4 text-slate-600;
   }
+  .barProgress {
+    @apply bg-slate-200 w-full h-2 rounded-full overflow-hidden dark:bg-slate-700;
+  }
+  .barProgress > div {
+    @apply bg-violet-500 h-full;
+  }
 }
 
 /* clears the 'X' from Internet Explorer */
