--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 .btn {
-  @apply bg-violet-600 hover:bg-violet-700 py-3 px-6 text-slate-50 rounded-lg w-auto transition dark:bg-violet-900;
+  @apply bg-violet-600 hover:bg-violet-700 py-3 px-6 text-slate-50 rounded-lg w-auto transition dark:bg-violet-800 dark:hover:bg-violet-900;
 }
 
 .btn:active {
@@ -16,7 +16,7 @@
 
 @layer components {
   .tasksList > li:first-of-type article {
-    @apply bg-violet-600 text-slate-100 dark:bg-violet-900;
+    @apply bg-violet-600 text-slate-100 dark:bg-violet-800;
   }
   .tasksList > li:first-of-type article .description {
     @apply text-violet-300;
@@ -44,7 +44,7 @@
     @apply inputStyles mt-1;
   }
   .stylesInputsField label {
-    @apply mb-4 text-slate-600;
+    @apply mb-4 text-slate-600 dark:text-slate-500;
   }
   .barProgress {
     @apply bg-slate-200 w-full h-2 rounded-full overflow-hidden dark:bg-slate-700;
