added error if directory exists

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .inputStyles {
-  @apply bg-slate-100 rounded-lg p-3 outline-transparent border-2 border-transparent hover:border-violet-600 focus:border-violet-600 focus:outline-none transition dark:bg-slate-800/[.5];
+  @apply bg-slate-100 text-slate-600 rounded-lg p-3 outline-transparent border-2 border-transparent hover:border-violet-600 focus:border-violet-600 focus:outline-none transition dark:bg-slate-800/[.5];
 }
 
 .btn {
@@ -38,6 +38,9 @@
   }
   .children-styles svg {
     @apply w-6 h-6;
+  }
+  .inputStyles::placeholder {
+    @apply text-slate-400 dark:text-slate-400;
   }
   .stylesInputsField input,
   .stylesInputsField textarea,
