--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .inputStyles {
-  @apply bg-slate-100 text-slate-600 dark:text-slate-200 rounded-lg p-3 outline-transparent border-2 border-transparent hover:border-violet-600 focus:border-violet-600 focus:outline-none transition dark:bg-slate-800/[.5];
+  @apply bg-slate-100 text-slate-600 dark:text-slate-200 rounded-lg p-3 outline-transparent border-2 border-transparent hover:border-violet-600 focus:border-violet-600 focus:outline-none transition dark:bg-slate-800;
 }
 
 .btn {
@@ -51,7 +51,7 @@
     @apply mb-4 text-slate-600 dark:text-slate-500;
   }
   .barProgress {
-    @apply bg-slate-200 w-full h-2 rounded-full overflow-hidden dark:bg-slate-700;
+    @apply bg-slate-200 w-full h-2 rounded-full overflow-hidden dark:bg-slate-700/[.3];
   }
   .barProgress > div {
     @apply bg-violet-600 h-full;
@@ -61,9 +61,6 @@
   }
   .itemDirectory:hover > .buttonsDir {
     @apply opacity-100;
-  }
-  .layoutMenuAccount {
-    @apply bg-slate-100 xl:flex flex-col h-screen w-60 xl:w-2/12 fixed dark:bg-slate-800/[.5] z-20;
   }
 }
 
